# Geometric-Skinning-Dissertation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/: artefactingprism.iqm  averagebuild.iqm  complexanimations-15k.iqm
build-feng/: CMakeCache.txt  Makefile  SkinningDiss  UnitTests  cmake_install.cmake
shaders/: base.frag  base.vert  skinned.vert
src/: animation.cpp  animation.h  camera.cpp  camera.hpp  main.cpp  modelloader.cpp  modelloader.hpp  montecarlo.cpp  unittests.cpp
