cmake_minimum_required(VERSION 3.0)
project(SkinningDiss CXX)
add_executable(${PROJECT_NAME} src/main.cpp src/modelloader.cpp)
add_executable(UnitTests src/unittests.cpp)
if(WIN32)
    message(STATUS "Using Windows library targets")
    target_link_libraries(${PROJECT_NAME} glfw3 opengl32 glew32)
    target_link_libraries(UnitTests glfw3 opengl32 glew32)
else()
    message(STATUS "Using Linux library targets")
    target_link_libraries(${PROJECT_NAME} glfw GL GLEW)
    target_link_libraries(UnitTests glfw GL GLEW)
endif()
target_compile_definitions(${PROJECT_NAME} PUBLIC ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}")
target_compile_definitions(UnitTests PUBLIC ROOTDIR="${CMAKE_CURRENT_SOURCE_DIR}")
